--- a/client/assets/css/main.styl
+++ b/client/assets/css/main.styl
@@ -72,8 +72,11 @@ html
 
 body
   background white
+  margin-top 2rem
+  margin-bottom 0
   @media screen and (orientation: portrait) and (max-width: 700px)
-    margin-bottom 2rem
+    margin-bottom 3rem
+    margin-top 0
 
 h1, h2, h3, h4, h5, h6
   font-family 'Zilla Slab', serif
@@ -87,6 +90,7 @@ p
 // Front page structure
 nav
   position fixed
+  top 0
   z-index 99
   width 100%
   height 2rem
@@ -95,7 +99,9 @@ nav
   align-items center
   background rgba(255,255,255,1)
   @media screen and (orientation: portrait) and (max-width: 700px)
+    top initial
     bottom 0
+    height 3rem
   img
     width 1rem
     height @width
@@ -145,7 +151,7 @@ footer
   display flex
   justify-content center
   align-items center
-  @media screen and (min-width: ($min-screen * 2))
+  @media screen and (min-width: ($min-screen * 2)), screen and (orientation: landscape)
     min-height 100vh
   
 .container
@@ -210,10 +216,15 @@ footer
 
 .notice
   width 100%
+  display flex
+  justify-content right
+  flex-flow row wrap
   text-align right
-  + img
-    float right
+  img
     width 20%
+    margin-left 1rem
+  h2
+    width 100%
 
 .divider
   width 100%
